--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -1,11 +1,11 @@
 version: 3
 projects:
-- dir: environments/dev
-  workflow: terragrunt
-  name: dev
-  autoplan: 
-    when_modified: ["**/*"]
-    enabled: true
+# - dir: environments/dev
+#   workflow: terragrunt
+#   name: dev
+#   autoplan: 
+#     when_modified: ["**/*"]
+#     enabled: true
 - dir: environments/prod
   workflow: terragrunt
   name: prod
