--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -16,9 +16,9 @@ workflows:
   terragrunt:
     plan:
       steps:
-      - env:
-          name: TERRAGRUNT_TFPATH
-          command: 'echo "terraform${ATLANTIS_TERRAFORM_VERSION}"'
+      # - env:
+      #     name: TERRAGRUNT_TFPATH
+      #     command: 'echo "terraform${ATLANTIS_TERRAFORM_VERSION}"'
       - env:
           # Reduce Terraform suggestion output
           name: TF_IN_AUTOMATION
